<resources>
    <string name="app_name">huyndph30375_assignment</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="getting_started">Getting Started</string>
    <string name="let_s_login_for_explore_continue">Let\'s login for explore continue</string>
    <string name="password">Password</string>
    <string name="remember_password">Remember Me</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up_here">Sign Up here</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="email">Email</string>
    <string name="join_us">Join us</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="login">Login</string>
    <string name="connect_to_management">Connect to management!</string>
    <string name="hr">HR</string>
    <string name="ch_c_b_n_m_t_ng_y_l_m_vi_c_hi_u_qu">Chúc bạn một ngày làm việc hiệu quả</string>
    <string name="ph_ng_ban">Phòng ban</string>
    <string name="hi_n_th_danh_s_ch_ph_ng_ban">Hiển thị ds phòng ban\n Tìm kiếm phòng ban</string>
    <string name="nh_n_vi_n">Nhân viên</string>
    <string name="hi_n_th_ds_nh_n_vi_n_n_ch_nh_s_a_xo_nh_n_vi_n">HIển thị ds nhân viên\n chỉnh sửa, xoá nhân viên</string>
    <string name="c_i_t_ng_d_ng_n_thay_i_giao_di_n_ng_d_ng">Cài đặt ứng dụng \n Thay đổi giao diện ứng dụng</string>
    <string name="ng_xu_t_kh_i_t_i_kho_n_n_ho_c_i_t_i_kho_n">Đăng xuất khỏi tài khoản \n Hoặc đổi tài khoản</string>
    <string name="ng_xu_t">Đăng xuất</string>
    <string name="tin_t_c_h_ng_ng_y">Tin tức hàng ngày</string>
    <string name="c_i_t">Cài đặt</string>
    <string name="danh_s_ch_ph_ng_ban">Danh sách phòng ban</string>
    <string name="nh_n_s">Nhân sự</string>
    <string name="search">Search</string>
    <string name="click_v_o_item_xem_chi_ti_t">Click vào item để xem chi tiết</string>
    <string name="danh_s_ch_nh_n_vi_n">Danh sách nhân viên</string>
    <string name="th_m_nh_n_vi_n_m_i">Thêm nhân viên mới</string>
    <string name="t_n_nh_n_vi_n">Tên nhân viên</string>
    <string name="th_m">Thêm</string>
    <string name="example_ph30375">example : PH30375</string>
    <string name="m_nh_n_vi_n">Mã nhân viên</string>
    <string name="s_a_th_ng_tin_nh_n_vi_n">Sữa thông tin nhân viên</string>
    <string name="s_a">Sửa</string>
    <string name="xo_nh_n_vi_n">Xoá NV</string>
    <string name="default_web_client_id_1">loginwithfirebase</string>
    <string name="register">Register</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="search_department">Search department</string>
    <string name="t_n_ph_ng_ban">Tên phòng ban</string>
    <string name="search_staff">Search Staff</string>
    <string name="th_ng_tin_nh_n_vi_n">Thông tin nhân viên</string>
    <string name="th_ng_tin_chi_ti_t">Thông tin chi tiết</string>
    <string name="c_p_nh_t_th_ng_tin">Cập nhật thông tin</string>
    <string name="yes_i_know">Yes I Know</string>
    <string name="example_staff_office">example : Staff, Office, ...</string>
    <string name="c_p_nh_t_th_ng_tin_tin">Cập nhật thông tin tin</string>
    <string name="h_t_n">Họ tên</string>
    <string name="s_i_n_tho_i">Số điện thoại</string>
    <string name="ch_n_ng_y_sinh">Chọn ngày sinh</string>
    <string name="a_ch">ĐỊA CHỈ</string>
    <string name="th_ng_tin_ng_n_h_ng">THÔNG TIN NGÂN HÀNG</string>
    <string name="ch_n_ng_n_h_ng">Chọn ngân hàng</string>
    <string name="s_t_i_kho_n_ng_n_h_ng">Số tài khoản ngân hàng</string>
    <string name="xo_h_s_nh_n_s">Xoá hồ sơ nhân sự</string>
    <string name="th_m_ph_ng_ban_m_i">Thêm phòng ban mới</string>
</resources>