<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_dialog"
    android:orientation="vertical"
    tools:context=".view.activity.DepartmentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgDismiss"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:src="@drawable/ic_close"
                tools:ignore="ContentDescription" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/th_m_nh_n_vi_n_m_i"
            android:textColor="@color/black_hole"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_24sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:text="@string/m_nh_n_vi_n"
                android:textColor="@color/black_hole"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/inputId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:autofillHints=""
                android:background="@drawable/background_input"
                android:focusableInTouchMode="true"
                android:hint="@string/example_ph30375"
                android:inputType="textEmailAddress"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:textSize="@dimen/_14sdp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:text="@string/t_n_nh_n_vi_n"
                android:textColor="@color/black_hole"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/inputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/background_input"
                android:focusableInTouchMode="true"
                android:hint="example : Nguyễn Duy Huy"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:textSize="@dimen/_14sdp"
                tools:ignore="Autofill,HardcodedText,RtlSymmetry" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:text="@string/ph_ng_ban"
                android:textColor="@color/black_hole"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp" />

            <Button
                android:id="@+id/buttonAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_26sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/background_button"
                android:layout_marginBottom="@dimen/_12sdp"
                android:text="@string/th_m" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>