<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".view.activity.LoginActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@color/secondary"
                app:cardCornerRadius="18dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:src="@drawable/img_login"
                        tools:ignore="ContentDescription,MissingPrefix" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_12sdp"
                        android:layout_marginEnd="@dimen/_12sdp"
                        android:text="@string/getting_started"
                        android:textColor="@color/black_hole"
                        android:textSize="@dimen/_16sdp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_12sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginEnd="@dimen/_12sdp"
                        android:text="@string/let_s_login_for_explore_continue"
                        android:textColor="@color/secondary"
                        android:textSize="@dimen/_10sdp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="true"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_12sdp"
                            android:layout_marginTop="@dimen/_24sdp"
                            android:layout_marginEnd="@dimen/_12sdp"
                            android:text="@string/email"
                            android:textColor="@color/black_hole"
                            android:textSize="@dimen/_12sdp"
                            android:textStyle="bold" />


                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:layout_marginEnd="@dimen/_10sdp"
                            android:autofillHints=""
                            android:background="@drawable/background_input"
                            android:drawableStart="@drawable/icon_gmail"
                            android:drawablePadding="@dimen/_10sdp"
                            android:focusableInTouchMode="true"
                            android:hint="@string/example_gmail_com"
                            android:inputType="textEmailAddress"
                            android:paddingStart="@dimen/_10sdp"
                            android:paddingEnd="@dimen/_10sdp"
                            android:textSize="@dimen/_12sdp"
                            tools:ignore="RtlSymmetry" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_12sdp"
                            android:layout_marginTop="@dimen/_16sdp"
                            android:layout_marginEnd="@dimen/_12sdp"
                            android:text="@string/password"
                            android:textColor="@color/black_hole"
                            android:textSize="@dimen/_12sdp"
                            android:textStyle="bold" />


                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">


                            <EditText
                                android:id="@+id/password_toggle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/_10sdp"
                                android:layout_marginTop="@dimen/_10sdp"
                                android:layout_marginEnd="@dimen/_10sdp"
                                android:background="@drawable/background_input"
                                android:focusableInTouchMode="true"
                                android:hint="*******"
                                android:inputType="textPassword"
                                android:paddingStart="@dimen/_10sdp"
                                android:paddingEnd="@dimen/_10sdp"
                                android:textSize="@dimen/_12sdp"
                                tools:ignore="Autofill,HardcodedText,RtlSymmetry" />


                            <ImageView
                                android:id="@+id/showPass"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:layout_marginTop="@dimen/_16sdp"
                                android:layout_marginEnd="@dimen/_20sdp"
                                android:src="@drawable/ic_showpassword"
                                tools:ignore="ContentDescription" />
                        </RelativeLayout>
                    </LinearLayout>

                    <CheckBox
                        android:id="@+id/checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/remember_password" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/buttonSignIn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_24sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:background="@drawable/background_button"
                        android:text="@string/sign_in"
                        android:textColor="@color/black_hole"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:text="Or Sign in with"
                        android:textColor="@color/secondary" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/signInGoogle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:background="@drawable/background_input"
                        android:drawableStart="@drawable/ic_google"
                        android:paddingStart="@dimen/_20sdp"
                        android:text="@string/sign_in_with_google"
                        android:textColor="@color/black_hole"
                        android:textSize="@dimen/_8sdp"
                        android:textStyle="bold"
                        tools:ignore="RtlSymmetry" />


                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:paddingBottom="@dimen/_12sdp">


                        <TextView
                            android:id="@+id/text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginStart="@dimen/_12sdp"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:layout_marginEnd="@dimen/_12sdp"
                            android:text="Don't have an account?"
                            android:textColor="@color/black_hole"
                            android:textSize="@dimen/_12sdp"
                            android:textStyle="bold"
                            tools:ignore="HardcodedText" />

                        <TextView
                            android:id="@+id/signUp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:layout_toEndOf="@id/text"
                            android:paddingEnd="@dimen/_12sdp"
                            android:text="@string/sign_up_here"
                            android:textColor="@color/primary"
                            android:textSize="@dimen/_12sdp"
                            android:textStyle="bold"
                            tools:ignore="RtlSymmetry" />
                    </RelativeLayout>


                </LinearLayout>


            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</FrameLayout>