<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary_two"
    android:orientation="vertical"
    tools:context=".view.activity.DepartmentActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                android:padding="@dimen/_5sdp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="true">

                    <ImageView
                        android:id="@+id/back"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/_12sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:src="@drawable/ic_back"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:text="@string/ph_ng_ban"
                        android:textColor="@color/black_hole"
                        android:textSize="@dimen/_18sdp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/back"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <EditText
                    android:id="@+id/search_bar"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:background="@drawable/background_search"
                    android:drawableStart="@drawable/ic_round_search_24"
                    android:drawablePadding="@dimen/_10sdp"
                    android:focusableInTouchMode="true"
                    android:hint="@string/search_department"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:textSize="@dimen/_14sdp"
                    tools:ignore="LabelFor,RtlSymmetry" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:text="@string/danh_s_ch_ph_ng_ban"
                    android:textColor="@color/black_hole"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:drawableStart="@drawable/ic_click"
                    android:text="@string/click_v_o_item_xem_chi_ti_t"
                    android:textColor="@color/black_hole"
                    android:textSize="@dimen/_10sdp"
                    android:textStyle="normal"
                    tools:ignore="UseCompatTextViewDrawableXml" />


                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recyclerviewDepartment"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_12sdp"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:layout_marginEnd="@dimen/_12sdp" />

                    </FrameLayout>
                </androidx.core.widget.NestedScrollView>

            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addDepartment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_12sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:backgroundTint="@color/primary"
            android:src="@drawable/ic_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>