<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_12sdp"
                android:src="@drawable/img_signup" />

           <androidx.core.widget.NestedScrollView
               android:layout_width="match_parent"
               android:layout_height="wrap_content">

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="vertical">


                  <LinearLayout
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:focusableInTouchMode="true">

                      <com.google.android.material.textfield.TextInputLayout
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content">

                          <com.google.android.material.textfield.TextInputEditText
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:layout_marginStart="@dimen/_10sdp"
                              android:layout_marginTop="@dimen/_10sdp"
                              android:layout_marginEnd="@dimen/_10sdp"
                              android:background="@drawable/background_input"
                              android:hint="Email/Phone number"
                              android:paddingStart="@dimen/_10sdp"
                              android:paddingEnd="@dimen/_10sdp"
                              android:textSize="@dimen/_12sdp" />

                      </com.google.android.material.textfield.TextInputLayout>

                      <com.google.android.material.textfield.TextInputLayout
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content">

                          <com.google.android.material.textfield.TextInputEditText
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:layout_marginStart="@dimen/_10sdp"
                              android:layout_marginTop="@dimen/_10sdp"
                              android:layout_marginEnd="@dimen/_10sdp"
                              android:background="@drawable/background_input"
                              android:hint="Password"
                              android:inputType="textPassword"
                              android:paddingStart="@dimen/_10sdp"
                              android:paddingEnd="@dimen/_10sdp"
                              android:textSize="@dimen/_12sdp" />

                      </com.google.android.material.textfield.TextInputLayout>
                  </LinearLayout>

                   <Button
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_marginStart="@dimen/_10sdp"
                       android:layout_marginTop="@dimen/_24sdp"
                       android:layout_marginEnd="@dimen/_10sdp"
                       android:background="@drawable/background_button"
                       android:text="@string/register"
                       android:textColor="@color/black_hole"
                       android:textStyle="bold" />



                   <RelativeLayout
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_gravity="center_horizontal"
                       android:paddingBottom="@dimen/_12sdp">


                       <TextView
                           android:id="@+id/text"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="@string/already_have_an_account"
                           android:textStyle="bold"
                           android:layout_marginStart="@dimen/_12sdp"
                           android:layout_marginEnd="@dimen/_12sdp"
                           android:layout_marginTop="@dimen/_10sdp"
                           android:textSize="@dimen/_12sdp"
                           android:layout_gravity="center_horizontal"
                           android:textColor="@color/black_hole" />

                       <TextView
                           android:id="@+id/login"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="@string/login"
                           android:layout_marginTop="@dimen/_10sdp"
                           android:textSize="@dimen/_12sdp"
                           android:layout_toEndOf="@id/text"
                           android:paddingEnd="@dimen/_12sdp"
                           android:textColor="@color/primary"
                           android:textStyle="bold"
                           tools:ignore="RtlSymmetry" />
                   </RelativeLayout>
               </LinearLayout>
           </androidx.core.widget.NestedScrollView>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>